--- a/meme/index.html
+++ b/meme/index.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Some of my favourite memes</title>
-    <link href="./img/logo.png" rel="shortcut icon">
+    <link href="./res/img/logo.png" rel="shortcut icon">
     <i class="incl-fonts"></i>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./res/css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
-    <script src="./js/includes.js" data-includes="navbar,./includes/nav.html|fonts,./includes/fonts.html|byme,./includes/meme_by_me.html"></script>
+    <script src="./res/js/includes.js" data-includes="navbar,./res/includes/nav.html|fonts,./res/includes/fonts.html|byme,./res/includes/meme_by_me.html"></script>
 </head>
 
 <body>
@@ -24,59 +24,59 @@
         <ul class="memes-ul">
             <li>
                 <h3 class="tertiary-text">1.<i class="incl-byme"></i></h3><br>
-                <img src="./img/memes/1.png">
+                <img src="./res/img/memes/1.png">
             </li>
             <li>
                 <h3 class="tertiary-text">2.<i class="incl-byme"></i></h3><br>
-                <img src="./img/memes/2.png">
+                <img src="./res/img/memes/2.png">
             </li>
             <li>
                 <h3 class="tertiary-text">3.<i class="incl-byme"></i></h3><br>
-                <img src="./img/memes/3.png">
+                <img src="./res/img/memes/3.png">
             </li>
             <li>
                 <h3 class="tertiary-text">4.<i class="incl-byme"></i></h3><br>
-                <img src="./img/memes/4.png">
+                <img src="./res/img/memes/4.png">
             </li>
             <li>
                 <h3 class="tertiary-text">5.</h3><br>
-                <img src="./img/memes/5.jpg">
+                <img src="./res/img/memes/5.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">6.</h3><br>
-                <img src="./img/memes/6.jpg">
+                <img src="./res/img/memes/6.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">7.</h3><br>
-                <img src="./img/memes/7.jpg">
+                <img src="./res/img/memes/7.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">8.</h3><br>
-                <img src="./img/memes/8.jpg">
+                <img src="./res/img/memes/8.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">9.</h3><br>
-                <img src="./img/memes/9.jpg">
+                <img src="./res/img/memes/9.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">10.</h3><br>
-                <img src="./img/memes/10.jpg">
+                <img src="./res/img/memes/10.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">11.</h3><br>
-                <img src="./img/memes/11.jpg">
+                <img src="./res/img/memes/11.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">12.</h3><br>
-                <img src="./img/memes/12.jpg">
+                <img src="./res/img/memes/12.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">13.</h3><br>
-                <img src="./img/memes/13.jpg">
+                <img src="./res/img/memes/13.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">14.</h3><br>
-                <img src="./img/memes/14.jpg">
+                <img src="./res/img/memes/14.jpg">
             </li>
         </ul>
     </main>
