--- a/text/index.html
+++ b/text/index.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text tools</title>
-    <link href="./img/logo.png" rel="shortcut icon">
+    <link href="./res/img/logo.png" rel="shortcut icon">
     <i class="incl-fonts"></i>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./res/css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
-    <script src="./js/includes.js"
-        data-includes="navbar,./includes/nav.html|fonts,./includes/fonts.html"></script>
+    <script src="./res/js/includes.js"
+        data-includes="navbar,./res/includes/nav.html|fonts,./res/includes/fonts.html"></script>
 </head>
 
 <body>
