add a meme, remove some useless files

--- a/meme/index.html
+++ b/meme/index.html
@@ -78,6 +78,10 @@
                 <h3 class="tertiary-text">14.</h3><br>
                 <img src="./res/img/memes/14.jpg">
             </li>
+            <li>
+                <h3 class="tertiary-text">15.<i class="incl-byme"></i></h3><br>
+                <img src="./res/img/memes/15.jpg">
+            </li>
         </ul>
     </main>
 </body>
