fix the cur:ptr from div to a in g+ in /contact

--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,7 @@
             <li style="background-color: black;"><a target="_blank" href="mailto:gigog27@yahoo.com">Email: gigog27@yahoo.com</a></li>
             <li style="background-color: orange;"><a target="_blank" href="https://scratch.mit.edu/users/Gigo_G/">Scratch: Gigo_G</a></li>
             <li style="background-color: darkslategrey;"><a target="_blank" href="https://github.com/GiggioG/">Github: GiggioG</a></li>
-            <li style="background-color: darkred;cursor:pointer;"><a target="_blank" onclick="alert('Dude, you have problems.\nNobody uses that thing.')">Google+: Gigo_G</a></li>
+            <li style="background-color: darkred;"><a style="cursor: pointer;" target="_blank" onclick="alert('Dude, you have problems.\nNobody uses that thing.')">Google+: Gigo_G</a></li>
             <li style="background-color: red;"><a target="_blank" href="https://www.youtube.com/channel/UCvr5U1Okzi-UchoJiBES0rw">YouTube: Gigo_G</a></li>
             <li style="background-color: forestgreen;"><a target="_blank" href="http://live.xbox.com/en-US/Profile?gamertag=GiggioG">Xbox Live: GiggioG</a></li>
             <li style="background-color: turquoise;"><a target="_blank" href="https://gigog.imgur.com/">Imgur: GiggioG</a></li>
