--- a/contact/index.html
+++ b/contact/index.html
@@ -31,6 +31,11 @@
             <li style="background-color: forestgreen;"><a target="_blank" href="http://live.xbox.com/en-US/Profile?gamertag=GiggioG">Xbox Live: GiggioG</a></li>
             <li style="background-color: turquoise;"><a target="_blank" href="https://gigog.imgur.com/">Imgur: GiggioG</a></li>
             <li style="background-color: darkgoldenrod;"><a target="_blank" href="https://stackoverflow.com/users/11547090/gigo-g">Stackoverflow: Gigo_G</a></li>
+            <li style="background-color: rgb(120,78,78);"><a target="_blank" href="https://www.openprocessing.org/user/170807">Openprocessing: Gigo_G</a></li>
+            <li style="background-color: rgb(231,27,86);"><a target="_blank" href="https://editor.p5js.org/Gigo_G/sketches">p5: Gigo_G</a></li>
+            <li style="background-color: rgb(114,80,62);"><a target="_blank" href="https://krunker.io/social.html?p=profile&q=Gigo_G">Krunker.io: Gigo_G</a></li>
+            <li style="background-color: rgb(30,215,96);"><a target="_blank" href="https://open.spotify.com/user/lum7b069m6k7kjl4k09omunan">Spotify: Gigo_G</a></li>
+            <li style="background-color: rgb(141,66,253);"><a target="_blank" href="https://www.twitch.tv/gigo_g">Twitch: gigo_g</a></li>
         </ul>
     </main>
 </body>
