make /contacts use 2 columns

--- a/contact/index.html
+++ b/contact/index.html
@@ -19,23 +19,42 @@
     <main>
         <h1 class="primary-text">Contact me</h1>
         <ul class="contacts-ul">
-            <li style="background-color: orangered;"><a target="_blank" href="https://www.reddit.com/user/Gigo_G">Reddit: Gigo_G</a></li>
-            <li style="background-color: royalblue;"><a target="_blank" href="https://twitter.com/gigog27">Twitter: gigog27</a></li>
-            <li style="background-color: purple;"><a target="_blank" href="https://www.instagram.com/gigog27/">Instagram: gigog27</a></li>
-            <li style="background-color: darkcyan;"><a target="_blank" href="https://discord.com/users/549181294882324501">Discord: Gigo_G#9857</a></li>
-            <li style="background-color: black;"><a target="_blank" href="mailto:gigog27@yahoo.com">Email: gigog27@yahoo.com</a></li>
-            <li style="background-color: orange;"><a target="_blank" href="https://scratch.mit.edu/users/Gigo_G/">Scratch: Gigo_G</a></li>
-            <li style="background-color: darkslategrey;"><a target="_blank" href="https://github.com/GiggioG/">Github: GiggioG</a></li>
-            <li style="background-color: darkred;"><a style="cursor: pointer;" target="_blank" onclick="alert('Dude, you have problems.\nNobody uses that thing.')">Google+: Gigo_G</a></li>
-            <li style="background-color: red;"><a target="_blank" href="https://www.youtube.com/channel/UCvr5U1Okzi-UchoJiBES0rw">YouTube: Gigo_G</a></li>
-            <li style="background-color: forestgreen;"><a target="_blank" href="http://live.xbox.com/en-US/Profile?gamertag=GiggioG">Xbox Live: GiggioG</a></li>
-            <li style="background-color: turquoise;"><a target="_blank" href="https://gigog.imgur.com/">Imgur: GiggioG</a></li>
-            <li style="background-color: darkgoldenrod;"><a target="_blank" href="https://stackoverflow.com/users/11547090/gigo-g">Stackoverflow: Gigo_G</a></li>
-            <li style="background-color: rgb(120,78,78);"><a target="_blank" href="https://www.openprocessing.org/user/170807">Openprocessing: Gigo_G</a></li>
-            <li style="background-color: rgb(231,27,86);"><a target="_blank" href="https://editor.p5js.org/Gigo_G/sketches">p5: Gigo_G</a></li>
-            <li style="background-color: rgb(114,80,62);"><a target="_blank" href="https://krunker.io/social.html?p=profile&q=Gigo_G">Krunker.io: Gigo_G</a></li>
-            <li style="background-color: rgb(30,215,96);"><a target="_blank" href="https://open.spotify.com/user/lum7b069m6k7kjl4k09omunan">Spotify: Gigo_G</a></li>
-            <li style="background-color: rgb(141,66,253);"><a target="_blank" href="https://www.twitch.tv/gigo_g">Twitch: gigo_g</a></li>
+            <li>
+                <div style="background-color: orangered;"><a target="_blank" href="https://www.reddit.com/user/Gigo_G">Reddit: Gigo_G</a></div>
+                <div style="background-color: rgb(141,66,253);"><a target="_blank" href="https://www.twitch.tv/gigo_g">Twitch: gigo_g</a></div>
+            </li>
+            <li>
+                <div style="background-color: royalblue;"><a target="_blank" href="https://twitter.com/gigog27">Twitter: gigog27</a></div>
+                <div style="background-color: rgb(30,215,96);"><a target="_blank" href="https://open.spotify.com/user/lum7b069m6k7kjl4k09omunan">Spotify: Gigo_G</a></div>
+            </li>
+            <li>
+                <div style="background-color: purple;"><a target="_blank" href="https://www.instagram.com/gigog27/">Instagram: gigog27</a></div>
+                <div style="background-color: rgb(90,0,204);"><a target="_blank" href="mailto:gigog27@yahoo.com">Email: gigog27@yahoo.com</a></div>
+            </li>
+            <li>
+                <div style="background-color: rgb(144,110,92);"><a target="_blank" href="https://krunker.io/social.html?p=profile&q=Gigo_G">Krunker.io: Gigo_G</a></div>
+                <div style="background-color: darkcyan;"><a target="_blank" href="https://discord.com/users/549181294882324501">Discord: Gigo_G#9857</a></div>
+            </li>
+            <li>
+                <div style="background-color: rgb(231,27,86);"><a target="_blank" href="https://editor.p5js.org/Gigo_G/sketches">p5: Gigo_G</a></div>
+                <div style="background-color: orange;"><a target="_blank" href="https://scratch.mit.edu/users/Gigo_G/">Scratch: Gigo_G</a></div>
+            </li>
+            <li>
+                <div style="background-color: rgb(120,78,78);"><a target="_blank" href="https://www.openprocessing.org/user/170807">Openprocessing: Gigo_G</a></div>
+                <div style="background-color: darkslategrey;"><a target="_blank" href="https://github.com/GiggioG/">Github: GiggioG</a></div>
+            </li>
+            <li>
+                <div style="background-color: darkgoldenrod;"><a target="_blank" href="https://stackoverflow.com/users/11547090/gigo-g">Stackoverflow: Gigo_G</a></div>
+                <div style="background-color: darkred;"><a style="cursor: pointer;" target="_blank" onclick="alert('Dude, you have problems.\nNobody uses that thing.')">Google+: Gigo_G</a></div>
+            </li>
+            <li>
+                <div style="background-color: turquoise;"><a target="_blank" href="https://gigog.imgur.com/">Imgur: GiggioG</a></div>
+                <div style="background-color: red;"><a target="_blank" href="https://www.youtube.com/channel/UCvr5U1Okzi-UchoJiBES0rw">YouTube: Gigo_G</a></div>
+            </li>
+            <li>
+                <div style="background-color: black;"><a target="_blank" href="haha">Shitpost</a></div>
+                <div style="background-color: forestgreen;"><a target="_blank" href="http://live.xbox.com/en-US/Profile?gamertag=GiggioG">Xbox live: GiggioG</a></div>
+            </li>
         </ul>
     </main>
 </body>
