Fix contact page's font to Dosis

--- a/contact/index.html
+++ b/contact/index.html
@@ -18,7 +18,7 @@
     <i class="incl-navbar"></i>
     <main>
         <h1 class="primary-text">Contact me</h1>
-        <ul class="contacts-ul">
+        <ul class="contacts-ul content-paragraph">
             <li>
                 <div style="background-color: orangered;"><a target="_blank" href="https://www.reddit.com/user/Gigo_G">Reddit: Gigo_G</a></div>
                 <div style="background-color: rgb(141,66,253);"><a target="_blank" href="https://www.twitch.tv/gigo_g">Twitch: gigo_g</a></div>
