Fix imgur username

--- a/contact/index.html
+++ b/contact/index.html
@@ -48,7 +48,7 @@
                 <div style="background-color: darkred;"><a style="cursor: pointer;" target="_blank" onclick="alert('Dude, you have problems.\nNobody uses that thing.')">Google+: Gigo_G</a></div>
             </li>
             <li>
-                <div style="background-color: turquoise;"><a target="_blank" href="https://gigog.imgur.com/">Imgur: GiggioG</a></div>
+                <div style="background-color: turquoise;"><a target="_blank" href="https://gigog.imgur.com/">Imgur: GigoG</a></div>
                 <div style="background-color: red;"><a target="_blank" href="https://www.youtube.com/channel/UCvr5U1Okzi-UchoJiBES0rw">YouTube: Gigo_G</a></div>
             </li>
             <li>
