add the shitpost

--- a/contact/index.html
+++ b/contact/index.html
@@ -52,7 +52,7 @@
                 <div style="background-color: red;"><a target="_blank" href="https://www.youtube.com/channel/UCvr5U1Okzi-UchoJiBES0rw">YouTube: Gigo_G</a></div>
             </li>
             <li>
-                <div style="background-color: black;"><a target="_blank" href="haha">Shitpost</a></div>
+                <div style="background-color: black;"><a target="_blank" href="./contact/shitpost.png">2013 Shitpost</a></div>
                 <div style="background-color: forestgreen;"><a target="_blank" href="http://live.xbox.com/en-US/Profile?gamertag=GiggioG">Xbox live: GiggioG</a></div>
             </li>
         </ul>
