change documents to projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@
     <base href="..">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documents</title>
+    <title>Projects</title>
     <link href="./res/img/logo.png" rel="shortcut icon">
     <i class="incl-fonts"></i>
     <link rel="stylesheet" href="./res/css/style.css">
@@ -17,8 +17,8 @@
 <body>
     <i class="incl-navbar"></i>
     <main class="content-paragraph">
-        <h1 class="primary-text">Documents</h1>
-        This page contains some documents written by me and<br>
+        <h1 class="primary-text">Projects</h1>
+        This page contains some projects made by me and<br>
         download links for them.
         <table>
             <thead>
