add for shu but its for ctf

--- a/projects/index.html
+++ b/projects/index.html
@@ -51,6 +51,18 @@
                   'Bulgarian md':'./res/downloads/CTF-Documentation/bg/CTF-Documentation.md',
                 })">Choose language & file type</a></td>
               </tr>
+              <tr>
+                <td>SHU</td>
+                <td>A chrome extention that enables developers to make utility plugins for jitsimeet based systems like shkolo.bg.<br>The name comes from SHkoloUtilities.</td>
+                <td><a href="javascript:downloads({
+                  'English pdf':'./res/downloads/CTF-Documentation/en/CTF-Documentation.pdf',
+                  'English html':'./res/downloads/CTF-Documentation/en/CTF-Documentation.html',
+                  'English md':'./res/downloads/CTF-Documentation/en/CTF-Documentation.md',
+                  'Bulgarian pdf':'./res/downloads/CTF-Documentation/bg/CTF-Documentation.pdf',
+                  'Bulgarian html':'./res/downloads/CTF-Documentation/bg/CTF-Documentation.html',
+                  'Bulgarian md':'./res/downloads/CTF-Documentation/bg/CTF-Documentation.md',
+                })">Choose language & file type</a></td>
+              </tr>
             </tbody>
             </table>
     </main>
