add shu verified list and added example

--- a/projects/index.html
+++ b/projects/index.html
@@ -54,7 +54,7 @@
               <tr>
                 <td>SHU</td>
                 <td>A chrome extention that enables developers to make utility plugins for jitsimeet based systems like shkolo.bg.<br>The name comes from SHkoloUtilities.</td>
-                <td><a href="https://github.com/GiggioG/shu/releases">Download from Github <i>*currently there is no release</i></a></td>
+                <td><a href="https://github.com/GiggioG/shu/releases">Download from Github<br><i>*currently there is no release</i></a></td>
               </tr>
             </tbody>
             </table>
