change color and add username to snap button

--- a/contact/index.html
+++ b/contact/index.html
@@ -28,12 +28,12 @@
                 <div style="background-color: purple;"><a target="_blank" href="https://www.instagram.com/gigog27/">Instagram: gigog27</a></div>
             </li>
             <li>
-                <div style="background-color: yellow;"><a target="_blank" href="/contact/snapcode.jpg">Snapchat</a></div>
+                <div style="background-color: yellow;"><a style="color:black" target="_blank" href="/contact/snapcode.jpg">Snapchat: gigog27</a></div>
                 <div style="background-color: rgb(90,0,204);"><a target="_blank" href="mailto:gigog27@yahoo.com">Email: gigog27@yahoo.com</a></div>
             </li>
             <li>
                 <div style="background-color: darkslategrey;"><a target="_blank" href="https://github.com/GiggioG/">Github: GiggioG</a></div>
-                <div style="background-color: cornflowerblue;"><a target="_blank" href="https://hub.docker.com/u/gigog">Docker Hub gigog</a></div>
+                <div style="background-color: cornflowerblue;"><a target="_blank" href="https://hub.docker.com/u/gigog">Docker Hub: gigog</a></div>
             </li>
             <li>
                 <div style="background-color: darkgoldenrod;"><a target="_blank" href="https://stackoverflow.com/users/11547090/gigo-g">Stackoverflow: Gigo_G</a></div>
