moved snapcode and added 3 memes

--- a/contact/index.html
+++ b/contact/index.html
@@ -28,7 +28,7 @@
                 <div style="background-color: purple;"><a target="_blank" href="https://www.instagram.com/gigog27/">Instagram: gigog27</a></div>
             </li>
             <li>
-                <div style="background-color: yellow;"><a style="color:black" target="_blank" href="/contact/snapcode.jpg">Snapchat: gigog27</a></div>
+                <div style="background-color: yellow;"><a style="color:black" target="_blank" href="/res/img/snapcode.jpg">Snapchat: gigog27</a></div>
                 <div style="background-color: rgb(90,0,204);"><a target="_blank" href="mailto:gigog27@yahoo.com">Email: gigog27@yahoo.com</a></div>
             </li>
             <li>
