--- a/meme/index.html
+++ b/meme/index.html
@@ -82,6 +82,24 @@
                 <h3 class="tertiary-text">15.<i class="incl-byme"></i></h3><br>
                 <img src="./res/img/memes/15.jpg">
             </li>
+            <li>
+                <h3 class="tertiary-text">16.<i class="incl-byme"></i></h3>
+                <img src="./res/img/memes/16.png">
+                <p class="content-paragraph">A very cringe meme my english class started with.</p>
+            </li>
+            <li>
+                <h3 class="tertiary-text">17.</h3><br>
+                <img src="./res/img/memes/17.png">
+            </li>
+            <li>
+                <h3 class="tertiary-text">18.<i class="incl-byme"></i></h3>
+                <img src="./res/img/memes/18.png">
+                <p class="content-paragraph">
+                    Translation:<br>
+                    Me, while my biology teacher is asking me questions<br>
+                    My copy of the class schedule, my clock and my notes<br>
+                </p>
+            </li>
         </ul>
     </main>
 </body>
