--- a/projects/index.html
+++ b/projects/index.html
@@ -10,54 +10,63 @@
     <i class="incl-fonts"></i>
     <link rel="stylesheet" href="./res/css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
-    <script src="./res/js/includes.js"
-        data-includes="navbar,./res/includes/nav.html|fonts,./res/includes/fonts.html"></script>
+    <script src="./res/js/includes.js" data-includes="navbar,./res/includes/nav.html|fonts,./res/includes/fonts.html"></script>
+    <script>
+        const downloads = dnlds => {
+            console.log(dnlds);
+            let div = document.createElement("div");
+            div.classList = "download-popup";
+            document.body.appendChild(div);
+            div.innerHTML += "<button class=\"download-popup-x\"onclick=\"document.querySelector('div.download-popup').remove();\">X</button>";
+            if (dnlds && (dnlds != {})) {
+                Object.keys(dnlds).forEach(dnld => {
+                    let el = document.createElement("a")
+                    el.innerText = dnld;
+                    el.setAttribute("href", dnlds[dnld]);
+                    el.setAttribute("download", true)
+                    div.appendChild(el)
+                    div.appendChild(document.createElement("br"));
+                });
+            }
+        };
+    </script>
 </head>
 
 <body>
-    <script>
-      const downloads = dnlds => {
-        let win = open("","",".");
-        if(dnlds && (dnlds != {})){
-          Object.keys(dnlds).forEach(dnld => {
-            win.document.body.innerHTML += `<a href="${dnlds[dnld]}" download>${dnld}</a><br>`;
-          });
-        }
-      };
-    </script>
     <i class="incl-navbar"></i>
     <main class="content-paragraph">
         <h1 class="primary-text">Projects</h1>
-        This page contains some projects made by me and<br>
-        download links for them.
+        This page contains some projects made by me and<br> download links for them.
         <table>
             <thead>
-              <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Download(s)</th>
-              </tr>
+                <tr>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Download(s)</th>
+                </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>CTF-Documentation</td>
-                <td>The rules of a game, called Capture the Flag (CTF)</td>
-                <td><a href="javascript:downloads({
+                <tr>
+                    <td>CTF-Documentation</td>
+                    <td>The rules of a game, called Capture the Flag (CTF)</td>
+                    <td><a class="projects-download-link" onclick="downloads({
                   'English pdf':'./res/downloads/CTF-Documentation/en/CTF-Documentation.pdf',
                   'English html':'./res/downloads/CTF-Documentation/en/CTF-Documentation.html',
                   'English md':'./res/downloads/CTF-Documentation/en/CTF-Documentation.md',
                   'Bulgarian pdf':'./res/downloads/CTF-Documentation/bg/CTF-Documentation.pdf',
                   'Bulgarian html':'./res/downloads/CTF-Documentation/bg/CTF-Documentation.html',
-                  'Bulgarian md':'./res/downloads/CTF-Documentation/bg/CTF-Documentation.md',
+                  'Bulgarian md':'./res/downloads/CTF-Documentation/bg/CTF-Documentation.md'
                 })">Choose language & file type</a></td>
-              </tr>
-              <tr>
-                <td>SHU</td>
-                <td><b><i>Project temporarely on hold</i></b> A chrome extention that enables developers to make utility plugins for jitsimeet based systems like shkolo.bg.<br>The name comes from SHkoloUtilities.</td>
-                <td><a href="https://github.com/GiggioG/shu/releases">Download from Github<br><i>*currently there is no release</i></a></td>
-              </tr>
+                </tr>
+                <tr>
+                    <td>SHU</td>
+                    <td><b><i>Project temporarely on hold</i></b> A chrome extention that enables developers to make utility plugins for jitsimeet based systems like shkolo.bg.<br>The name comes from SHkoloUtilities.</td>
+                    <td><a href="https://github.com/GiggioG/shu/releases">Download from Github<br><i>*currently there is
+								no
+								release</i></a></td>
+                </tr>
             </tbody>
-            </table>
+        </table>
     </main>
 </body>
 
